Format string issues in NetworkCache.cpp https://bugs.webkit.org/show_bug.cgi?id=149867

Reviewed by Csaba Osztrogonác.

Cast enums to ints before printing them to placate GCC's -Wformat.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::Cache::retrieve):
(WebKit::NetworkCache::Cache::store):


Canonical link: https://commits.webkit.org/168064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190726 268f45cc-cd09-0410-ab3c-d52691b4dbfc